--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a{
 
 h1 a:hover, h2 a:hover, h3 a:hover, 
 h4 a:hover, h5 a:hover, h6 a:hover{
-	color:#f0394d;
+	color:#4c47cc;
 }
 
 h1, h2, h3,
@@ -481,7 +481,7 @@ img.with-border{
   	font-weight: normal;
   	font-size:10px;
 	content: '\e9bd';
-	color:#f0394d;
+	color:#4c47cc;
 	text-align:center;
 }
 
@@ -498,7 +498,7 @@ img.with-border{
 }
 
 #nav-menu > li a:hover{
-	color:#f0394d;
+	color:#4c47cc;
 }
 
 /* 03.1.1 Transparent 							 */
@@ -508,7 +508,7 @@ img.with-border{
 }
 
 .transparent #nav-menu > li a:hover{
-	color:#f0394d;
+	color:#4c47cc;
 }
 
 .transparent.stick-it #nav-menu > li a{
@@ -540,7 +540,7 @@ img.with-border{
 	list-style-type:none;
 	padding:0;
 	text-align:left;
-	border-top:solid 3px #f0394d
+	border-top:solid 3px #4c47cc
 }
 
 #nav-menu li:hover > ul{
@@ -560,7 +560,7 @@ img.with-border{
 }   
 
 #nav-menu ul li a:hover{
-	background-color:#f0394d;
+	background-color:#4c47cc;
 	border:none;
 	color:#FFF;
 }
@@ -686,7 +686,7 @@ img.with-border{
 }
 
 #menu-icon a:hover i{
-	color:#f0394d
+	color:#4c47cc
 }
 
 #menu-icon.white a i{
@@ -695,7 +695,7 @@ img.with-border{
 }
 
 #menu-icon.white a:hover i{
-	color:#f0394d
+	color:#4c47cc
 }
 
 
@@ -723,7 +723,7 @@ img.with-border{
 }
 
 #sticky-menuicon a:hover{
-	background-color:#f0394d;
+	background-color:#4c47cc;
 }
 
 #sticky-menuicon a:hover i{
@@ -780,7 +780,7 @@ img.with-border{
 }
 
 #close-button:hover i{
-	color:#f0394d;
+	color:#4c47cc;
 }
 
 /* 04.3.3 Parent Menu */
@@ -802,7 +802,7 @@ img.with-border{
   	font-weight: normal;
   	font-size:10px;
 	content: '\e9bd';
-	color:#f0394d;
+	color:#4c47cc;
 	text-align:center;
 	vertical-align:middle;
 	padding-right:10px;
@@ -817,7 +817,7 @@ img.with-border{
 }
 
 #side-nav-menu > li a:hover{
-	color:#f0394d;
+	color:#4c47cc;
 }
 
 /* 04.3.4 Child Menu */
@@ -879,7 +879,7 @@ img.with-border{
 	width:100%; 
 	height:100%; 
 	border-radius:0%; 
-	background-color:#f0394d; 
+	background-color:#4c47cc; 
 	color:#FFF; 
 	text-align:center; 
 	font-family: 'Arvo', serif;
@@ -1082,7 +1082,7 @@ img.with-border{
 }
 
 .pink-dot{
-	color: #f0394d; 
+	color: #4c47cc; 
 }
 
 /* ----------------------------------------------*/
@@ -1269,7 +1269,7 @@ img.with-border{
 }
 
 .sidebar-menu li a:hover{
-	color:#f0394d;
+	color:#4c47cc;
 }
 
 .side-tab{
@@ -1323,7 +1323,7 @@ img.with-border{
 	left:0; 
 	right:0; 
 	top:-12px;
-	color:#f0394d !important; 
+	color:#4c47cc !important; 
 	background-color:#e1dddd !important;
 }
 
@@ -1484,7 +1484,7 @@ hr.line-divider{
 }*/
 
 .pink-heart{
-	color:#f0394d; 
+	color:#4c47cc; 
 	font-size:18px; 
 	position:relative; 
 	z-index:3
@@ -1525,8 +1525,8 @@ a.de-button.outline, span.de-button.outline, input[type=submit].outline{
 }
 
 a.de-button.reverse, span.de-button.reverse, input[type=submit].reverse{
-	background-color:#f0394d; 
-	border:solid 1px #f0394d;
+	background-color:#4c47cc; 
+	border:solid 1px #4c47cc;
 	color:#FFF;
 }
 
@@ -1546,8 +1546,8 @@ a.de-button.large, span.de-button.large, input[type=submit].large{
 }
 
 a.de-button:hover, input[type=submit]:hover{
-	background-color:#f0394d;
-	border-color:#f0394d;
+	background-color:#4c47cc;
+	border-color:#4c47cc;
 	color:#FFF;
 	text-decoration:none;
 }
@@ -1646,7 +1646,7 @@ input[type=submit]:disabled, input[type=submit]:hover:disabled{
 	font-family: "fontello";
 	position:absolute;
 	font-size:22px;
-	color:#f0394d;
+	color:#4c47cc;
 	content:"\e806";
 	top:-17px;
 	left:0;
@@ -1803,11 +1803,11 @@ input[type=submit]:disabled, input[type=submit]:hover:disabled{
 }
 
 .de-icon.default.reverse{
-	color:#f0394d;
+	color:#4c47cc;
 }
 
 a:hover .de-icon.default, a:hover .de-icon.default.light{
-	color:#f0394d;
+	color:#4c47cc;
 }
 
 a:hover .de-icon.default.reverse{
@@ -1834,7 +1834,7 @@ a:hover .de-icon.default.light.reverse{
 }
 
 .de-icon.square.reverse, .de-icon.circle.reverse, .de-icon.rounded.reverse{
-	background-color:#f0394d;
+	background-color:#4c47cc;
 	color:#FFF;
 }
 
@@ -1845,7 +1845,7 @@ a:hover .de-icon.default.light.reverse{
 
 .de-icon.square.light.reverse, .de-icon.circle.light.reverse, .de-icon.rounded.light.reverse{
 	background-color:#FFF;
-	color:#f0394d;
+	color:#4c47cc;
 }
 
 
@@ -1857,8 +1857,8 @@ a:hover .de-icon.default.light.reverse{
 
 .de-icon.outline.reverse{
 	background-color:transparent;
-	color:#f0394d;
-	border:1px solid #f0394d;
+	color:#4c47cc;
+	border:1px solid #4c47cc;
 }
 
 .de-icon.outline.light, .de-icon.outline.light.reverse{
@@ -1868,7 +1868,7 @@ a:hover .de-icon.default.light.reverse{
 }
 
 a:hover .de-icon.circle, a:hover .de-icon.rounded, a:hover .de-icon.square{
-	background-color:#f0394d;
+	background-color:#4c47cc;
 	color:#FFF;
 	border:none;
 }
@@ -1922,7 +1922,7 @@ a:hover .de-icon.effect2 i{
 /* 08.5 Effect Square/Rounded To Circle 	  	  */
 /*------------------------------------------------*/
 a:hover .de-icon.effect3{
-	background-color:#f0394d;
+	background-color:#4c47cc;
 	color:#fff;
 	border-radius: 50%;
 }
@@ -2366,8 +2366,8 @@ form .btn-primary.focus,
 form .btn-primary:active,
 form .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-	background-color:#f0394d; 
-	border-color:#f0394d;
+	background-color:#4c47cc; 
+	border-color:#4c47cc;
 	color:#FFF;
  	border-color: #cccccc;
 }
@@ -2440,7 +2440,7 @@ option{
 }
 
 .message .bg-danger{
-	background-color:#f0394d; 
+	background-color:#4c47cc; 
 }
 
 .message .bg-success{
@@ -2704,7 +2704,7 @@ footer .image-divider.fixed-height{
 }
 
 .his-her-name .custom-heart{
-	background-color:#f0394d; 
+	background-color:#4c47cc; 
 	width:65px; 
 	height:65px; 
 	line-height:65px;	
@@ -2739,7 +2739,7 @@ footer .image-divider.fixed-height{
 	margin-left:16px;
 	height:85px; 
 	width:85px; 
-	background-color:#f0394d; 
+	background-color:#4c47cc; 
 	border-radius:50%;
 }
 
@@ -2807,7 +2807,7 @@ footer .image-divider.fixed-height{
 }
 
 .and{
-	color:#f0394d
+	color:#4c47cc
 }
 
 .border-column{
@@ -2853,7 +2853,7 @@ h2#dont-miss-it-title{
 }
 
 .circle-countdown .countdown-amount {
-	background-color:#f0394d;
+	background-color:#4c47cc;
 	width:85px;
 	height:85px;
 	border-radius:50%;
@@ -2946,7 +2946,7 @@ h2#dont-miss-it-title{
 
 .owl-theme .owl-controls .owl-page.active span,
 .owl-theme .owl-controls.clickable .owl-page:hover span{
-	background: #f0394d;
+	background: #4c47cc;
 }
 
 /* -------------------------------------------*/
@@ -3120,7 +3120,7 @@ button.mfp-close, button.mfp-arrow {
 }
 
 #nav-menu li a:hover{
-	background-color:#f0394d;
+	background-color:#4c47cc;
 	color:#FFF;
 }
 
